# Doosan-Pick-and-Place

./: DockerFile  Dockerfile  README.md  compose.yml
aruco_ros/aruco_ros/: CMakeLists.txt
aruco_ros/aruco_ros/aruco_ros/aruco_ros/launch/: quadruple.launch.py
aruco_ros/aruco_ros/aruco_ros/aruco_ros/src/: simple_quadruple.cpp
aruco_ros/aruco_ros/launch/: quadruple.launch.py
aruco_ros/aruco_ros/src/: simple_quadruple.cpp
common2/: CHANGELOG.rst  CMakeLists.txt  package.xml
common2/imp/: DR_common2.py  DR_error2.py  DR_init.py  DR_tcp_client2.py  DR_tcp_server2.py  DSR_ROBOT2.py  DSR_util2.py
common2/include/: dsr_robot.h
common2/servicepack/: auto_setup
common2/servicepack/serial_node_example/: CMakeLists.txt  package.xml
common2/src/: dsr_robot.cpp
doosan-robot2/: delete me
doosan-robot2/common2/imp/: DR_common2.py  DR_init.py  DSR_ROBOT2.py
doosan-robot2/dsr_bringup2/dsr_bringup2/: connection.py
doosan-robot2/dsr_description2/xacro/: m1013.urdf.xacro
doosan-robot2/sort_seg/: package.xml  setup.cfg  setup.py
doosan-robot2/sort_seg/launch/: sort_seg.launch.py  sort_seg2.launch.py  sort_seg3.launch.py
doosan-robot2/sort_seg/sort_seg/: cam_map.py  color_detect_node.py  connection.py  coord_test.py  grip_test.py  move_robot.py  robot_controller.py  sort_seg.py
dsr_bringup2/: package.xml
dsr_bringup2/launch/: dsr_bringup2_gazebo.launch.py  dsr_bringup2_moveit.launch.py
dsr_controller2/config/: default.yaml  dsr_controller2.yaml
dsr_controller2/launch/: dsr_control2.launch.py  dsr_moveit2.launch.py
dsr_controller2/src/: dsr_control_node2.cpp
dsr_description2/: CMakeLists.txt  package.xml
dsr_description2/config/: macro.gazebo.xacro
dsr_description2/launch/: dsr_description.launch.py
dsr_description2/ros2_control/: m1013.gz_ros2_control.xacro  m1013.ros2_control.xacro
dsr_description2/rviz/: default.rviz
dsr_description2/urdf/: m1013.blue.urdf  m1013.urdf  m1013.white.urdf
dsr_gazebo2/: package.xml
dsr_gazebo2/launch/: dsr_gazebo.launch.py  dsr_spawn_on_gazebo.launch.py
dsr_hardware2/include/dsr_hardware2/: dsr_hw_interface2.h
dsr_hardware2/src/: dsr_hw_interface2.cpp
dsr_moveit2/m1013_moveit_config/config/: dsr.ros2_control.xacro  dsr.srdf  initial_positions.yaml  joint_limits.yaml  m1013.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
dsr_moveit2/m1013_moveit_config/launch/: start.launch.py
dsr_msgs2/: CMakeLists.txt  package.xml
dsr_msgs2/srv/motion/: MoveSpiral.srv
onrobot/onrobot_rg_control/: setup.py
onrobot/onrobot_rg_control/config/: rg6_control_params.yaml
onrobot/onrobot_rg_control/launch/: bringup_dual.launch
onrobot/onrobot_rg_control/msg/: OnRobotRGInput.msg  OnRobotRGOutput.msg
onrobot/onrobot_rg_control/nodes/: OnRobotRGSimpleController.py  OnRobotRGStatusListener.py
onrobot/onrobot_rg_description/: CMakeLists.txt
onrobot/onrobot_rg_description/config/: rg6_visualize.rviz
onrobot/onrobot_rg_description/launch/: disp_rg6_model.launch.py
onrobot/onrobot_rg_description/urdf/: onrobot_rg6.xacro  onrobot_rg6_gazebo.xacro  onrobot_rg6_model.xacro  onrobot_rg6_model_macro.xacro  onrobot_rg6_transmission.xacro
onrobot/onrobot_rg_gazebo/: CMakeLists.txt
onrobot/onrobot_rg_modbus_tcp/: setup.py
onrobot/onrobot_rg_modbus_tcp/src/onrobot_rg_modbus_tcp/: comModbusTcp.py
sort_seg/: setup.py
sort_seg/launch/: demo.launch.py  rs_launch.py  sort_seg.launch.py  visual.launch.py
sort_seg/sort_seg/: cam_map.py  color_detect_node.py  connect_test.py  coord_test.py  grip_test.py  move_robot.py  robot_controller.py  sort_seg.py  spring_demo.py  spring_grab.py  test.py
